# benchy

./: .gitignore  Cargo.toml  deno.jsonc  dprint.json  fresh.gen.ts  import_map.json  index.d.ts  lock.json  main.ts  package.json  pnpm-lock.yaml  readme.md  rust-toolchain.toml  tmp.js
.github/actions/deno/: action.yml
.github/actions/pnpm/: action.yml
.github/workflows/: benchmark.yml
benchmarks/: bench.ts  gather.ts  get-versions.ts  runner.js  utils.js
benchmarks/entries/: async_fn_noop.js  async_fn_resolved.js  async_fn_sleep.js  async_fn_value.js  class.js  console.js  console_log.js  control_flow.js  function.js  json.js  map.js  set.js
benchmarks/entries/fetch/: run.js  server.ts  setup.ts
benchmarks/entries/ffi/: bun.js  deno.js  node.js
benchmarks/entries/files/: bun.js  deno.js  node.js  setup.ts
benchmarks/entries/server/: bun-server.js  deno-server.js  node-server.js  setup.ts
benchmarks/entries/wasm/: deno.js  node.js
benchmarks/fixtures/: async.js  async_resolved.js  async_value.js  console_log.js
benchmarks/runtimes/: bun.js  deno.js  node.js
benchmarks/rust/: Cargo.toml  build.rs  readme.md
benchmarks/rust/src/: deno.rs  ffi.rs  lib.rs  node.rs  utils.rs  wasm.rs
config/: node_wasm.ts  rename_napi.ts
config/scripts/: cache.ts  node_wasm.ts  typecheck.ts
islands/: Chart.jsx
routes/: index.tsx
src/: types.ts
static/runtime/: 1659978221398.json  1660025629124.json  1660032651117.json  entries.json
