[package]
name = "benchmark_rust"
version = "0.0.0"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
license = "Unlicense"

[lib]
crate-type = ["cdylib", "rlib"]
name = "benchmark_rust"

[dependencies]
cfg-if = "1.0.0"
deno_bindgen = { version = "0.6.0", optional = true }
js-sys = { version = "0.3.59", optional = true }
napi = { version = "2.7.0", optional = true }
napi-derive = { version = "2.7.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"], optional = true }

[build-dependencies]
napi-build = { version = "2.0.1", optional = true }

[features]
wasm = ["wasm-bindgen", "js-sys"]
ffi = []
deno = ["deno_bindgen"]
node = ["napi-derive", "napi", "napi-build"]
